2007-03-19  Bruno coudoin  <bruno.coudoin@free.fr>

	* configure.in: set _AM_DEPENDENCIES([OBJC]) or we get error
	 am__fastdepOBJC does not appear in AM_CONDITIONAL
	* src/boards/maze.c: (maze_create_item), (game_won), (movePos),
	(is_visible), (gcDisplay), (Display3): added bonus display.

2007-03-19  Yves Combe <yves@ycombe.net>

	Add --enable-nsbundle to configure.in, with foundation/Foundation.h check.
	Add NSBundle usage to reloc in this case
	Add NSBundle construction target in Makefile.am

	* Makefile.am:
	* configure.in:
	* src/gcompris/Makefile.am:
	* src/gcompris/gcompris-nsbundle.h:
	* src/gcompris/gcompris-nsbundle.m:
	* src/gcompris/gcompris.c: (main):

2007-03-19  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/searace.py: does instant rotation now. improved the parameters
	  to make it more realistic. Now a straigh line won't win all time.
	  It's now possible to change the level or reset the race even when it is started.

2007-03-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/algebra.c: (start_board), (end_board),
	(algebra_create_item): fixed to use translated operators for +-x/

2007-03-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* gcompris/bonus/lion_good.png: new bonus from Mathieu Ignacio. Released under GPL.
	* gcompris/bonus/lion_bad.png:
	* docs/C/python.xml:
	* src/boards/memory.c: (player_win):
	* src/boards/py-mod-bonus.c: (python_gcompris_bonus_module_init):
	* src/gcompris/bonus.c: (gc_bonus_display):
	* src/gcompris/bonus.h:

2007-03-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/imageid.xml.in: reverted stupid change in r2503, the boarddir needs to be set
	* src/boards/scale.c: (scale_anim_plate): changed the color of the text.

2007-03-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/scale.c: (scale_anim_plate): fixed fuzzy plate by Miguel, now on the right plate.

2007-03-18  Bruno coudoin  <bruno.coudoin@free.fr>
