@@ -60,11 +60,11 @@ AC_ARG_ENABLE(nsbundle,
 NSBUNDLE_CPPFLAGS=
 NSBUNDLE_LDFLAGS=
 
-_AM_DEPENDENCIES([OBJC])
 #check header for nsbundle
 if test "x$nsbundle" = "xyes"; then
    AC_PROG_OBJC([gcc])
    AC_PROG_OBJCPP([gcc])
+
    if test "x$native_osx" = "xyes"; then
       AC_LANG_PUSH([Objective C])
       AC_CHECK_HEADER(Foundation/Foundation.h, NSFoundation="yes" , NSFoundation="no")
@@ -88,7 +88,13 @@ if test "x$nsbundle" = "xyes"; then
       NSBUNDLE_LDFLAGS="-rdynamic -fgnu-runtime -L$GNUSTEP_SYSTEM_ROOT/Library/Libraries -lgnustep-base"
       AC_LANG_POP([Objective C])
    fi
+   AC_DEFINE_UNQUOTED(NSBUNDLE, 1, [ Define to 1 to use NSBundle for relocation (OSX/GNUstep) ])
+else
+OBJC=$CC
+AC_SUBST(OBJC)
 fi
+
+_AM_DEPENDENCIES([OBJC])
 
 AC_SUBST(NSBUNDLE_CPPFLAGS)
 AC_SUBST(NSBUNDLE_LDFLAGS)
@@ -102,8 +108,6 @@ BUNDLE_APPDIR="$nsbundledir"
 BUNDLE_NAME="$bundlename"
 AC_SUBST(BUNDLE_APPDIR)
 AC_SUBST(BUNDLE_NAME)
-
-AC_DEFINE_UNQUOTED(NSBUNDLE, 1, [ Define to 1 to use NSBundle for relocation (OSX/GNUstep) ])
 
 AM_CONDITIONAL(WITH_NSBUNDLE, test "$nsbundle" = yes)
 
@@ -176,6 +180,12 @@ AM_ICONV
 
 dnl XF86VidMode allows us to set the screen resolution dynamically
 AC_PATH_X
+
+XLIBADD=
+if "x$x_libraries" != "x"; then
+  XLIBADD=" -L$x_libraries "
+fi
+
 AC_ARG_ENABLE(xf86vidmode,
           AC_HELP_STRING(
           [--disable-xf86vidmode],
@@ -186,9 +196,9 @@ if test "x$USE_XF86VM" == "xyes" ; then
   XF86VM_LIBS=
   AC_CHECK_LIB(Xxf86vm, XF86VidModeQueryExtension,
              [AC_CHECK_HEADER(X11/extensions/xf86vmode.h,
-                              XF86VM_LIBS="-L$x_libraries -lXxf86vm" found_xf86vidmode=yes,,
+	     	XF86VM_LIBS="$XLIBADD -lXxf86vm" found_xf86vidmode=yes,,
                                 [#include <X11/Xlib.h>])],
-               , -L$x_libraries $ALL_X_LIBS )
+               , $XLIBADD $ALL_X_LIBS )
 
   if test "x$found_xf86vidmode" = "xno"; then
      AC_MSG_NOTICE(["Suitable XF86VidMode extension library not found - Will not use xf86vidmode for fullscreen."])
